# Broadcaster

./: .env.example  README.md  docker-compose.yaml
Broadcast_tg_sender/: .dockerignore  .env.example  Dockerfile  pyproject.toml
Broadcast_tg_sender/tg_bot_sender/: bot.py  main.py
Broadcast_tg_sender/tg_bot_sender/config_data/: config.py
Broadcast_tg_sender/tg_bot_sender/db/: database.py
Broadcast_tg_sender/tg_bot_sender/db/models/: base.py  channel.py  user.py
Broadcast_tg_sender/tg_bot_sender/services/queries/: base.py
Broadcast_tg_sender/tg_bot_sender/services/s3/: dependency.py
Broadcast_tg_sender/tg_bot_sender/tasks/: broadcast.py
Broadcast_tg_setter/: .env.example  README.md  alembic.ini  pyproject.toml
Broadcast_tg_setter/tg_bot_publisher/: main.py  set_broadcast.py
Broadcast_tg_setter/tg_bot_publisher/config_data/: config.py
Broadcast_tg_setter/tg_bot_publisher/db/: database.py
Broadcast_tg_setter/tg_bot_publisher/db/migrations/: env.py
Broadcast_tg_setter/tg_bot_publisher/db/models/: __init__.py  base.py  channel.py  user.py
Broadcast_tg_setter/tg_bot_publisher/fsm/: fsm.py
Broadcast_tg_setter/tg_bot_publisher/handlers/: broadcast_handlers.py  channel_group_handlers.py  channel_handlers.py  general_handlers.py  updating_channel_group_handlers.py  user_handlers.py
Broadcast_tg_setter/tg_bot_publisher/keyboards/: broadcast_keyboard.py  channel_group_keyboard.py  channel_keyboard.py  general_keyboard.py  keyboards.py  update_channel_group_keyboard.py
Broadcast_tg_setter/tg_bot_publisher/lexicon/: lexicon_ru.py
(+14 files in other folders)
