[tool.poetry]
name = "broadcast-news-sender"
version = "0.1.0"
description = ""
authors = ["Andrey Kazackov <AndreyKazackoB@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.4.1"
aiogram = "^3.7.0"
environs = "^11.0.0"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
